2007-12-13  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interface/R/igraph/R/print.R (print.igraph) : use the 'print' method
	of complex attributes

2007-11-15  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/centrality.R (igraph.arpack.default) : updated
	* interfaces/R/src/rinterface.c.in (R_SEXP_to_igraph_arpack_options)
	(R_igraph_arpack_options_to_SEXP) : updated

2007-11-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (page.rank)
	* interfaces/R/src/rinterface.c.in (R_igraph_pagerank) :
	removed, generated by Stimulus

	* interfaces/R/igraph/R/community.R (leading.eigenvector.community) :
	removed 'naive' version, generated by Stimulus now
	* interfaces/R/src/rinterface.c.in : updated

2007-11-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : add 'main' and 'sub'
	arguments

	* interfaces/R/igraph/R/layout.R (layout.norm) : make it public

2007-10-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (grg.game) : add 'coords' argument
	* interfaces/R/src/rinterface.c.in (R_igraph_grg_game) : updated

	* interfaces/R/igraph/R/plot.R (plot.igraph) : 'add' argument added

2007-10-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.common.R (i.parse.plot.params) :
	check the existence of graphical arguments

2007-10-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c.in (R_igraph_warning_handler)
	(R_igraph_before, R_igraph_before2, R_igraph_after, R_igraph_after2) :
	proper warnings added

2007-10-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c.in (R_SEXP_igraph_arpack_options)
	(R_igraph_arpack_options_to_SEXP) : added
	* interfaces/R/igraph/R/centrality.R (igraph.arpack.default) : added

2007-10-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c.in (R_igraph_attribute_copy) :
	updated, ga, va, ea attributes added

2007-10-22  Gabor Csardi  <csardi@rmki.kfki.hu>
