@@ -22,6 +22,8 @@ export(V, E, "$.igraph.vs", "$.igraph.es",
        "$<-.igraph.vs", "$<-.igraph.es", "V<-", "E<-",
        print.igraph.vs, print.igraph.es, "%--%", "%->%", "%<-%")
 
+S3method("$", igraph)
+S3method("$<-", igraph)
 S3method("$", igraph.vs)
 S3method("[", igraph.vs)
 S3method("[<-", igraph.vs)
